style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  font-size: 62.5%;
  font-family: "Poppins", sans-serif;
}

body {
  background-color: #f5f5f5;
  min-width: 345px;
}

.nav-bar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  text-align: center;
  width: 100%;
  padding: 24px;
  background-color: #fff;
}

.main-bar__items {
  display: none;
}

.logo {
  color: #6070ff;
  text-decoration: none;
  font-size: 1.8rem;
  line-height: 20px;
  font-style: normal;
  font-weight: bold;
  animation-name: rotate;
  animation-duration: 2s;
  animation-delay: 0.5s;
  animation-iteration-count: 1;
  animation-timing-function: linear;
  animation-direction: normal;
}

@keyframes rotate {
  0% {
    transform: scale(1.5);
  }

  20% {
    transform: scale(1.5) rotate(180deg);
  }

  100% {
    transform: rotate(0);
  }
}

.menu {
  width: 2.7rem;
}

.headline {
  display: flex;
  flex-direction: column;
  background-color: #fff;
  background-image: url(./img/header-shapes\ mobile1.png);
  background-repeat: no-repeat;
  background-size: 100% 100%;
  border-bottom-left-radius: 60px;
  padding: 100px 24px;
  width: 100%;
}

.container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 3em;
}

.container h1 {
  color: #172b4d;
  font-size: 4rem;
  font-style: normal;
  font-weight: bold;
  line-height: 52px;
}

.container p {
  line-height: 24px;
  color: #344563;
  font-size: 1.6rem;
}

.contact-me {
  display: flex;
  flex-direction: column;
  gap: 3em;
}

.contact-me p {
  color: #475DFF;
  font-weight: 500;
  font-size: 1.6rem;
  height: 24px;
  line-height: 24px;
}

.contact-me a {
  text-decoration: none;
}

.contact-me ul {
  display: flex;
  justify-content: space-between;
  width: 60%;
  max-width: 239.512px;
}

.contact-me li {
  list-style: none;
}

.work-section {
  display: grid;
  justify-items: center;
  justify-content: center;
  grid-template-columns: auto;
  grid-template-rows: auto;
  background-color: #f5f5f5;
  column-gap: 0;
  padding: 114px 24px;
  row-gap: 88px;
  width: 100%;
}

.card-work {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 3em;
  background-color: #fff;
  border-radius: 16px;
  border: 1px solid #dfe1e6;
  padding: 16px;
}

.card-work__img {
  width: 100%;
}

.card-work__info {
  display: flex;
  flex-direction: column;
  gap: 2em;
}

.card-work__info h2 {
  font-style: normal;
  font-weight: bold;
  font-size: 4rem;
  line-height: 52px;
}

.contact-form__me h2 {
  color: #fff;
  font-family: "Poppins", sans-serif;
  font-size: 4rem;
  font-style: normal;
  font-weight: bold;
  line-height: 52px;
}

.card-work h1 {
  color: #172b4d;
  font-size: 3.2rem;
  font-weight: bold;
  font-style: normal;
  line-height: 44px;
}

.frame2 {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  padding: 8px 0;
}

.frame2 p {
  margin-right: 12px;
  font-size: 1.3rem;
  font-weight: 600;
  color: #344563;
  line-height: 16px;
}

.frame2 ul {
  display: flex;
  padding: 0;
}

.frame2 li {
  margin: 0 15px 0 15px;
  list-style-image: url(./img/Counter.svg);
  font-size: 1.3rem;
  font-weight: 600;
  color: #7a869a;
}

.contact-form__me p {
  color: #fff;
  font-size: 2rem;
  font-style: normal;
  font-weight: normal;
  line-height: 28px;
  text-align: center;
  transition: all 0.3s linear;
}

.about-container p {
  line-height: 24px;
  color: #344563;
  font-size: 1.6rem;
  padding: 0;
}

.card-work__info > p {
  font-size: 1.5rem;
  line-height: 24px;
  color: #344563;
}

.contact-form__me p:hover {
  transform: translate(5px, 0);
}

.programing-lamguages {
  display: flex;
  gap: 1em;
  padding: 0;
  width: 100%;
}

.categories-list li {
  list-style: none;
}

.programing-lamguages li {
  padding: 8px 12px;
  list-style: none;
  font-size: 1.2rem;
  font-style: normal;
  color: #6070ff;
  line-height: 16px;
  border-radius: 8px;
  background-color: #ebebff;
}

.about-section button {
  background-color: #fff;
  border-radius: 8px;
  border: 1px solid #6070ff;
  color: #3D51FF;
  font-size: 1.7rem;
  font-weight: 500;
  letter-spacing: 1px;
  line-height: 24px;
  padding: 12px;
  width: 60%;
  max-width: 247.4px;
  min-width: 160px;
  transition: all 0.5s ease-in;
}

.about-section button:hover {
  background-color: #4D5EFF;
  color: #fff;
}

.about-section button:focus {
  background-color: #4D5EFF;
  color: #fff;
}

.about-section button:active {
  background-color: #5263FF;
  color: #fff;
}

.work-section__btn {
  width: 40%;
  min-width: 135.837px;
  padding: 12px;
  font-size: 1.7rem;
  font-weight: 500;
  line-height: 24px;
  letter-spacing: 1px;
  color: #3D51FF;
  border: 1px solid #6070ff;
  border-radius: 8px;
  background-color: #fff;
  transition: all 0.5s ease-in;
}

.card-work button:hover {
  background-color: #4D5EFF;
  color: #fff;
}

.card-work button:focus {
  background-color: #4D5EFF;
  color: #fff;
}

.card-work button:active {
  background-color: #5263FF;
  color: #fff;
}

.about-section {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  gap: 3em;
  width: 100%;
  padding: 114px 24px 114px 24px;
  border-top-right-radius: 60px;
  background-color: #fff;
}

.about-container {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  gap: 3em;
  background-color: #fff;
}

.about-container h1 {
  color: #172b4d;
  font-size: 4rem;
  font-weight: bold;
  font-style: normal;
  line-height: 52px;
  padding: 0;
  margin: 0;
}

.about-section .contact {
  display: flex;
  flex-direction: column;
  gap: 3em;
  background-color: #fff;
}

.about-section .contact p {
  color: #475DFF;
  font-size: 1.6rem;
  font-weight: 500;
  height: 24px;
  line-height: 24px;
}

.about-section .contact a {
  text-decoration: none;
}

.about-section .contact ul {
  display: flex;
  justify-content: space-between;
  width: 60%;
  max-width: 239.512px;
}

.about-section .contact li {
  list-style: none;
}

.skill-list {
  background-color: #fff;
}

.categories-list {
  background-color: #fff;
  padding: 0;
  margin: 0;
}

.categories-list > li div {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.categories-list .langguages {
  display: flex;
  flex-direction: column;
  gap: 1em;
  width: 100%;
  padding: 0;
  margin: 0;
}

.categories-list .arrow1 {
  width: 12px;
  height: 6px;
  margin: 40px;
}

.categories-list .arrow2 {
  width: 6px;
  height: 12px;
  margin: 42px;
}

.categories-list .langguages p {
  font-size: 1.5rem;
  font-weight: 500;
  color: #253858;
}

.categories-list .langguages li {
  display: inline-flex;
  justify-content: space-between;
  align-items: center;
  background-color: #f7f7f9;
  border-radius: 8px;
  padding: 10px 20px;
}

.categories-list h2 {
  padding: 0;
  margin: 0;
  font-size: 2rem;
  font-weight: 500;
  line-height: 24px;
}

.categories-list .frameworks {
  display: flex;
  flex-direction: column;
  margin: 12px 0;
  border-bottom: 1px solid #dfe1e6;
}

.categories-list .skills {
  display: flex;
  flex-direction: column;
  border-bottom: 1px solid #dfe1e6;
}

.contact-form-section {
  background-color: #fff;
  margin: 0 0 8px 0;
  width: 100%;
}

.contact-form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 3em;
  background-color: #6070ff;
  background-image: url(./img/contact-form-shapes-mobile.svg);
  background-position: right top;
  background-repeat: no-repeat;
  background-size: 270px 850px;
  border-radius: 60px 0 0 0;
  padding: 103px 24px 8px 24px;
}

.contact-form__me {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 3em;
  text-align: center;
  width: 100%;
}

.contact-form__info {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2em;
  width: 100%;
}

.contact-form__info input {
  border-radius: 8px;
  border: 1px solid #cfd8dc;
  font-size: 1.7rem;
  padding: 15px 38px 15px 16px;
  width: 100%;
  min-width: 311.2px;
}

.contact-form__info textarea {
  border-radius: 8px;
  border: 1px solid #cfd8dc;
  font-size: 1.5rem;
  padding: 15px 38px 15px 16px;
  resize: none;
  width: 100%;
  min-width: 311.2px;
}

.contact-form__btn {
  background-color: #fff;
  border-radius: 8px;
  border: 1px solid #cfd8dc;
  color: #6070ff;
  padding: 12px;
  font-size: 1.7rem;
  font-weight: 500;
  line-height: 24px;
  letter-spacing: 0.03em;
  min-width: 129px;
  width: 40%;
  transition: all 0.5s ease-in;
}

.contact-form__btn:hover {
  background-color: #4D5EFF;
  color: #fff;
  border: 3.5px solid #fff;
  font-weight: bold;
}

.contact-form__btn:focus {
  background-color: #6070ff;
  color: #fff;
  border: 3.5px solid #fff;
  font-weight: bold;
}

.contact-form__btn:active {
  background-color: #2230d2;
  color: #fff;
  border: 3.5px solid #fff;
  font-weight: bold;
}

.black-line {
  display: block;
  width: 134px;
  margin: 32px auto;
}

img {
  transition: all 0.5s ease-in;
}

img:hover {
  transform: scale(1.05);
}

@media screen and (min-width: 992px) {
  .nav-bar {
    padding: 30px 142px 0 142px;
  }

  .menu {
    display: none;
  }

  .main-bar__items {
    display: flex;
    justify-content: space-around;
    gap: 3.2em;
    list-style: none;
  }

  .main-bar__item a {
    text-decoration: none;
    font-size: 15px;
    font-style: normal;
    font-weight: 500;
    line-height: 20px;
    color: #344563;
    transition: all 0.2s ease-in;
  }

  .main-bar__item a:hover {
    color: #fff;
    background-color: #344563;
    padding: 5px 8px;
    border-radius: 4px;
  }

  .main-bar__item a:focus {
    color: #fff;
    background-color: #344563;
    padding: 5px 8px;
    border-radius: 4px;
  }

  .headline {
    padding: 230px 260px 255px 260px;
    background-image: url(./img/Desktop/Header-bg.svg);
    background-repeat: no-repeat;
    background-size: 100% 100%;
    gap: 2em;
  }

  .container {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    gap: 1em;
  }

  .container h1 {
    font-size: 4.8rem;
  }

  .container p {
    font-size: 2rem;
    line-height: 28px;
  }
}

@media screen and (min-width: 992px) {
  .work-section {
    /* padding: 142px 80px; */
  }

  .card-work {
    flex-direction: row;
    width: 100%;
    padding: 40px;
  }

  .card-work__img img {
    width: 100%;
    height: 100%;
  }

  .card-work__info {
    gap: 2.5em;
  }

  .work-reversed-row {
    flex-direction: row-reverse;
  }
}

@media screen and (min-width: 992px) {
  .about-section {
    flex-direction: row;
    padding: 142px;
  }

  .about-me {
    display: flex;
    flex-direction: column;
    width: 40%;
    gap: 3rem;
  }

  .skill-list {
    width: 60%;
  }

  .categories-list .langguages {
    flex-direction: row;
  }

  .categories-list .langguages li {
    width: 30%;
    display: block;
    padding: 12px;
  }
}

@media screen and (min-width: 992px) {
  .contact-form {
    background-image: url(./img/Desktop/contact\ form-background-shapes.svg);
    background-size: 100% 100%;
    background-repeat: no-repeat;
    align-items: center;
    padding: 142px 319px;
  }

  .contact-form__info input {
    border-radius: 2px;
  }

  .contact-form__info textarea {
    border-radius: 2px;
  }

  .contact-form__info {
    padding: 0 100px;
  }

  .contact-form__btn {
    text-align: center;
  }

  .black-line {
    display: none;
  }
}

